# FileScanner-AppWeb

./: README.md
.github/workflows/: deploy.yml
deploy/: deploy.sh  nginx-filescanner.conf  selftest.sh
server/: Cargo.toml
server/src/: error.rs  main.rs  types.rs
server/src/analyzer/: archive.rs  binary_parser.rs  entropy.rs  hash.rs  lnk_analyzer.rs  mime.rs  mod.rs  pdf_analyzer.rs  script_parser.rs  strings.rs
server/src/api/: mod.rs  virustotal.rs
server/src/scanner/: clamav_db.rs  mod.rs  pipeline.rs  yara_engine.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.vue  style.css
web/src/components/: DropZone.vue  ResultDetails.vue  SectionCard.vue  VerdictPanel.vue
web/src/stores/: scan.ts
web/src/types/: scan.ts
