[package]
name = "filescanner-server"
version = "1.0.1"
edition = "2021"

[dependencies]
axum           = { version = "0.8", features = ["multipart"] }
tokio          = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tower-http     = { version = "0.6", features = ["fs", "limit", "trace", "timeout", "cors", "set-header"] }
tower          = { version = "0.4", features = ["util"] }
tower_governor = "0.7"
tracing            = "0.1"
tracing-subscriber = "0.3"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "2"

# Hashing (MD5 + SHA-1 + SHA-256 + SHA-512)
sha1  = "0.10"
sha2  = "0.10"
md-5  = "0.10"
hex   = "0.4"

# Binaires : PE + ELF + Mach-O
goblin = "0.9"

# Détection MIME par magic bytes (bytes-based, pas de fichier requis)
infer = "0.16"

# Archives ZIP (inspection + macros Office)
zip = "2"

# HTTP client VirusTotal (rustls, pas d'OpenSSL)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Regex patterns scan + extraction IOC
regex = "1"

# ClamAV database parsing
flate2 = "1"
tar = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
